--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: NickingTheData
-description: My exploration into data, usually in python :smile: :python:
+description: My exploration into data, usually in python
 github_username: nickvazz
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "NickingTheData"
